--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./header.css">
     <link rel="stylesheet" href="./css/home.css">
-
+    <link rel="stylesheet" href="./css/fulfilment.css">
     <link rel="stylesheet" href="animate.min.css">
-     
+    <link rel="stylesheet" href="./css/solutions.css">
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/324b71f187.js" crossorigin="anonymous"></script>
@@ -101,9 +101,45 @@
 
         </section>
         <section class="fulfilment" id="Fulfilment">
-            
+
+            <div class="section__title">
+                <h1 class="title"><span class="Ux-amarelo">UX.</span>Fulfilment</h1>
+                <i class="fas fa-clock"></i>
+            </div>
+            <div class="section__subtitle__text">
+                <h2 class="subtitulo">Temos a inteligencia dos centros de distribuição</h2>
+                <div class="image__text">
+                    <div class="pai">
+                        <div class="text_pai">
+                        <p class="text">  
+                            A UX é formada por quem conhece de operação e oferece sua estrutura e know how para gerir o estoque de seus parceiros,
+                            garantindo a despreocupação para um e-commerce focar exclusivamente em suas vendas.
+                        </p>
+                        <p class="text">
+                            Fazemos toda a sua operação com inteligência e velocidade para que o produto esteja armazenado de forma correta e proativa.
+                        </p></div>
+                        <div class="botao_fulfilment"> <a href="https://uxff.com.br/"><p><i class="fas fa-arrow-circle-right"></i> Venhar saber mais sobre nós.</p></a></div>
+                    </div>
+                    <img class="image" src="./css/img/spencer-davis-a_4tgP1t6Y0-unsplash 1.png" alt="">
+                </div>
+            </div>
+
         </section>
         <section class="solutions" id="Solutions">
+
+            <div class="section_title">
+                <h1><span class="Ux-azul">UX.</span>Solutions</h1>
+                <div class="chave"><i class="fas fa-wrench"></i></div>
+            </div>
+            <div class="section__subtitle__text">
+                <h2>Tecnologia para gestão de fretes.</h2>
+                <p>
+                    A UX defende que não existe operação de sucesso se não houver inovação tecnológica aliada.
+                     Para isso desenvolveu sistemas próprios (WEB <> APP) para e-commerce, marketplaces e transportadores gerenciarem suas entregas.
+                </p>
+                <p></p>
+            </div>
+
 
         </section>
         <section class="delivery" id="Delivery">
