--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./css/fulfilment.css">
     <link rel="stylesheet" href="animate.min.css">
     <link rel="stylesheet" href="./css/solutions.css">
+    <link rel="stylesheet" href="./css/delivery.css">
+
+
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/324b71f187.js" crossorigin="anonymous"></script>
@@ -20,8 +23,8 @@
 
 </head>
 <body>
+    
     <header>
-        
         <div class="logo">
             UX.
             <div class="logo_simbolo">
@@ -111,13 +114,14 @@
                 <div class="image__text">
                     <div class="pai">
                         <div class="text_pai">
-                        <p class="text">  
-                            A UX é formada por quem conhece de operação e oferece sua estrutura e know how para gerir o estoque de seus parceiros,
-                            garantindo a despreocupação para um e-commerce focar exclusivamente em suas vendas.
-                        </p>
-                        <p class="text">
-                            Fazemos toda a sua operação com inteligência e velocidade para que o produto esteja armazenado de forma correta e proativa.
-                        </p></div>
+                            <p class="text">  
+                                A UX é formada por quem conhece de operação e oferece sua estrutura e know how para gerir o estoque de seus parceiros,
+                                garantindo a despreocupação para um e-commerce focar exclusivamente em suas vendas.
+                            </p>
+                            <p class="text">
+                                Fazemos toda a sua operação com inteligência e velocidade para que o produto esteja armazenado de forma correta e proativa.
+                            </p>
+                        </div>
                         <div class="botao_fulfilment"> <a href="https://uxff.com.br/"><p><i class="fas fa-arrow-circle-right"></i> Venhar saber mais sobre nós.</p></a></div>
                     </div>
                     <img class="image" src="./css/img/spencer-davis-a_4tgP1t6Y0-unsplash 1.png" alt="">
@@ -132,17 +136,54 @@
                 <div class="chave"><i class="fas fa-wrench"></i></div>
             </div>
             <div class="section__subtitle__text">
-                <h2>Tecnologia para gestão de fretes.</h2>
-                <p>
-                    A UX defende que não existe operação de sucesso se não houver inovação tecnológica aliada.
-                     Para isso desenvolveu sistemas próprios (WEB <> APP) para e-commerce, marketplaces e transportadores gerenciarem suas entregas.
-                </p>
-                <p></p>
+                <h2 class="subtitulo">Tecnologia para gestão de fretes.</h2>
+                <div class="text__image">
+                    <div class="pai">
+                        <div class="text_pai">
+                            <p class="text">
+                                A UX defende que não existe operação de sucesso se não houver inovação tecnológica aliada.
+                                Para isso desenvolveu sistemas próprios (WEB <> APP) para e-commerce, marketplaces e 
+                                transportadores gerenciarem suas entregas.
+                            </p>
+                            <p class="text">
+                                Através de nossas tecnologias você pode fazer com que seu e-commerce  
+                                tenha uma ótima evolução, para a realização de uma expertise em seus fretes.
+                            </p>
+                        </div>
+                        <div class="botao_solutions">
+                            <a href="https://uxsolutions.com.br/"><p><i class="fas fa-arrow-circle-right"></i> Venhar saber mais sobre nós.</p></a>
+                        </div>
+                    </div>
+                    <img class="image" src="./css/img/Security On-rafiki 1.png" alt="">
+                    <div></div>
+                </div>
             </div>
 
 
         </section>
         <section class="delivery" id="Delivery">
+
+            <div class="section__title">
+                <h1 class="title"><span class="Ux-vermelho">UX.</span>Delivery</h1>
+            </div>
+            <div class="section__subtitle__textt">
+                <h2 class="subtituloo">Gestão unificada de transportes.</h2>
+                <div class="image__textt">
+                    <div class="paii">
+                        <div class="text_paii">
+                            <p class="textt">  
+                                A UX entende as dificuldades de um e-commerce para gerir diferentes parceiros de transportes e para 
+                                isso, oferece uma solução centralizada nela, 
+                                com informação em tempo real, para entregar rápido por todo Brasil.
+                            <p class="textt">
+                                Com a nossa gestão de transporte você consegue fazer com que as entregas cheguem em até 24H
+                            </p>
+                        </div>
+                        <div class="botao_delivery"> <a href="https://uxdelivery.com.br/"><p><i class="fas fa-arrow-circle-right"></i> Venhar saber mais sobre nós.</p></a></div>
+                    </div>
+                    <img class="image" src="./css/img/Logistics-rafiki 1.png" alt="">
+                </div>
+            </div>
 
         </section>
         <section class="contato" id="contato">
