--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <section class="solutions" id="Solutions">
 
             <div class="section_title">
-                <h1><span class="Ux-azul">UX.</span>Solutions</h1>
+                <h1 class="title_solutions"><span class="Ux-azul">UX.</span>Solutions</h1>
                 <div class="chave"><i class="fas fa-wrench"></i></div>
             </div>
             <div class="section__subtitle__text">
@@ -143,7 +143,7 @@
                 <h1 class="title"><span class="Ux-vermelho">UX.</span>Delivery</h1>
             </div>
             <div class="section__subtitle__textt">
-                <h2 class="subtituloo">Gestão unificada de transportes.</h2>
+                <h2 class="subtitulo">Gestão unificada de transportes.</h2>
                 <div class="image__textt">
                     <div class="paii">
                         <div class="text_paii">
@@ -180,7 +180,7 @@
                     <p><span class="ux-vermelho"> UX.</span></p>
             
                 </div>
-                <img src="./css/img/image 1.png" alt=""></div>
+                <img class="logo_contato" src="./css/img/image 1.png" alt=""></div>
             </div>
             <div class="direitos">
                 
