--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="linha"></div>
             </div>
             <div class="images">
-                <img src="./css/img/image 1.png" alt="logo3_anos">
+                <img class="logo3anos" src="./css/img/image 1.png" alt="logo3_anos">
                 <div class="somos_ux" id="home">
                     
                         <p><span class="ux-azul">UX.</span></p>
