--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             </div>
             
             <div class="texts">
-                <p>
+                <p class="text_home">
                     UX Group é um hub de soluções de tecnologia e serviços logísticos
                      que busca trazer inovações para viabilizar e acelerar o mercado de e-commerce.
                  </p>
                 
-                    <p>
+                    <p class="text_home">
                         Operação e tecnologia para o pequeno e-commerce até o marketplace <>
                         Inovação desde o clique da compra, passando pela armazenagem até a entrega ao cliente final.
                     </p>                
