--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/delivery.css">
     <link rel="stylesheet" href="./css/contato.css">
     <link rel="stylesheet" href="./css/responsividade.css">
+    <link rel="stylesheet" href="./css/animacoes_botao.css">
 
 
     <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -30,9 +31,9 @@
         <div class="logo " id="header">
             UX.
             <div class="logo_simbolo">
-                <div class="amarelo"></div>
-                <div class="azul"></div>
-                <div class="vermelho"></div>
+                <div class="amarelo animate__fadeInRight"></div>
+                <div class="azul animate__fadeInRight"></div>
+                <div class="vermelho animate__fadeInRight"></div>
             </div>
         </div>
     </header>
